--- a/_pgbackup/css/styles_1716740275.css
+++ b/_pgbackup/css/styles_1716740275.css
@@ -279,7 +279,7 @@ a {
 }
 
 a:hover {
-    color: ;
+    color: #b1d7c6;
     color: #b1d7c6;
 }
 
@@ -4139,7 +4139,7 @@ fieldset:disabled .btn {
     padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
     font-size: var(--bs-nav-link-font-size);
     font-weight: var(--bs-nav-link-font-weight);
-    color: #b1d7c6;
+    color: #0B1116;
     text-decoration: none;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
